--- a/app/src/main/res/layout/post_content_fragment.xml
+++ b/app/src/main/res/layout/post_content_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.PostContentActivity">
+    tools:context=".ui.PostContentFragment">
 
     <EditText
         android:id="@+id/edit"
@@ -13,7 +13,7 @@
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:background="@android:color/transparent"
-        android:importantForAutofill="no"
+        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
